# SCRAM-boxapp

./: .gitattributes  .gitignore  README.md  WINDOWS_DEVKIT_MANIFEST.txt  WINDOWS_DEVKIT_README_zh.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/config_binding/: config_model.py
app/i18n/: en_US.json  zh_CN.json
app/resources/: settings.json
app/services/: deployment_paths.py  i18n_service.py  plot_service.py  report_service.py  run_service.py  settings_service.py  template_service.py
app/views/: main_window.py
core/defaults/: default_config.cfg
core/executables_or_wrappers/runtime/windows/: README.md  coag_only_short.cfg  tutorial_linux.cfg
core/executables_or_wrappers/runtime/windows/INIT/: fractions.txt
core/executables_or_wrappers/runtime/windows/source/SCRAM1.1/: README  SConstruct
core/schema/: config_schema.json
core/templates/: baseline12h.cfg
docs/: BUG_TRACKING.md  SCRAM_BoxApp_中文用户操作手册.md  SCRAM_BoxApp_本科教学实验手册.md  config_mapping_spec.md  demo_walkthrough.md  gui_workflow.md  report_dependencies_windows.md  shared_runtime_layout.md  validation_checklist.md  windows_devkit_readme_zh.md
docs/undergrad_lab_assets/: final_state_summary.csv  performance_summary.csv
docs/user_manual_zh_assets/: final_state_summary.csv  performance_summary.csv
examples/configs/: default_config.cfg
scripts/: capture_screenshots.py  fetch_report_dependencies_windows.ps1  launch_app.py  make_windows_devkit.ps1  package_app_windows.bat  package_app_windows.ps1  run_app_windows.bat  run_pipeline.py  run_standard_tests.py
(+66 files in other folders)
