[project]
name = "scram-boxapp-nearest-legacy"
version = "0.1.0"
description = "Standalone GUI box-model app for nearest vs legacy SCRAM experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7,<6.9",
  "matplotlib>=3.8",
  "SCons>=4.8",
]

[tool.pyinstaller]
name = "SCRAMBoxAppNearestLegacy"
